[package]
name = "qr-api"
version = "0.1.0"
authors = ["Zola Gonano <zolagonano@protonmail.com>"]
edition = "2018"

[dependencies]
rocket = "0.4.7"
qrcode = "0.12"
rqrr = "0.3.2"
image = "0.23.14"
base64 = "0.13.0"

[dependencies.rocket_contrib]
version = "0.4.7"
default-features = false
features = ["json"]
